force-app/main/default/objects/Service_Incident__c/Service_Incident__c.object-meta.xml
<CustomObject>
    <description>Used to track outages and system interruptions</description>
    <label>Service Incident</label>
    <nameField>
        <displayFormat>SV-{0000}</displayFormat>
        <label>SV-ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Incidents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>