force-app/main/default/objects/Service_Incident__c/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <description>What caused the outage</description>
    <label>Cause</label>
    <type>TextArea</type>
</CustomField>