force-app/main/default/objects/Service_Incident__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>(floor(( Time_Resolved__c - Time_Reported__c)*24)) 
+ 
((((( Time_Resolved__c - Time_Reported__c)*24)-floor(( Time_Resolved__c - Time_Reported__c )*24))*60)/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>