force-app/main/default/objects/Service_Incident__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <label>Impact</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customers</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>LegalZoom</fullName>
            </value>
            <value>
                <fullName>FirstData</fullName>
            </value>
            <value>
                <fullName>Other Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>