force-app/main/default/objects/Service_Incident__c/fields/Reported_by__c.field-meta.xml
<CustomField>
    <fullName>Reported_by__c</fullName>
    <label>Reported by</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customers</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>LegalZoom</fullName>
            </value>
            <value>
                <fullName>FirstData</fullName>
            </value>
            <value>
                <fullName>Other Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>