force-app/main/default/objects/Service_Incident__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fix in Testing</fullName>
            </value>
            <value>
                <fullName>Fix Deployed</fullName>
            </value>
            <value>
                <fullName>Fix Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>