force-app/main/default/objects/Service_Incident__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <label>Summary</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>