force-app/main/default/objects/Service_Incident__c/fields/Time_Reported__c.field-meta.xml
<CustomField>
    <fullName>Time_Reported__c</fullName>
    <label>Time Reported</label>
    <type>DateTime</type>
</CustomField>