force-app/main/default/objects/Service_Incident__c/fields/Time_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Time_Resolved__c</fullName>
    <label>Time Resolved</label>
    <type>DateTime</type>
</CustomField>